Add headings to tabs

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
       <section id="sectionResults">
         <div class="row d-none" id="finetuning">
           <div class="col">
+            <div id="finetuningHeading"></div>
             <div id="resultsByThesis">
               Detaillierte Ergebnisse / Resultate mit eigener Meinung in
               tabellarischer Form <br />
@@ -322,26 +323,16 @@
         </div>
         <div class="row activeTab" id="results">
           <div class="col">
-            <div id="resultsHeading">
-              &Uuml;berschrift f&uuml;r die Ergebnisse/Resultate (ungenutzt)
-              <br />
-              Headline for the results (unused)
-            </div>
-
-            <div id="resultsAddonTop">
-              <!-- Platzhalter / Placeholder -->
-            </div>
-
-            <div id="resultsShort">
-              Ergebnisse / Resultate der Parteien in tabellarischer Form <br />
-              Table with results (short) - DOM / id = "resultsShortTable"
-            </div>
+            <div id="resultsHeading"></div>
+            <div id="resultsShort"></div>
           </div>
         </div>
         <div class="row d-none" id="shareAndSave">
+          <div id="shareAndSaveHeading"></div>
           <div class="col"></div>
         </div>
         <div class="row d-none" id="info">
+          <div id="infoHeading"></div>
           <div class="col"></div>
         </div>
       </section>
