Redesigned content of filters tab

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       <section id="sectionResults">
         <div class="row d-none" id="finetuning">
           <div class="col">
-            <div id="finetuningHeading"></div>
+            <div id="finetuningHeading" class="tabHeading"></div>
             <div id="resultsByThesis">
               Detaillierte Ergebnisse / Resultate mit eigener Meinung in
               tabellarischer Form <br />
@@ -323,16 +323,16 @@
         </div>
         <div class="row activeTab" id="results">
           <div class="col">
-            <div id="resultsHeading"></div>
+            <div id="resultsHeading" class="tabHeading"></div>
             <div id="resultsShort"></div>
           </div>
         </div>
         <div class="row d-none" id="shareAndSave">
-          <div id="shareAndSaveHeading"></div>
+          <div id="shareAndSaveHeading" class="tabHeading"></div>
           <div class="col"></div>
         </div>
         <div class="row d-none" id="info">
-          <div id="infoHeading"></div>
+          <div id="infoHeading" class="tabHeading"></div>
           <div class="col"></div>
         </div>
       </section>
