Centered icons using flex

--- a/index.html
+++ b/index.html
@@ -225,14 +225,14 @@
                       <button
                         type="button"
                         id="votingBack"
-                        class="btn btn-secondary btn float-left"
+                        class="btn btn-secondary btn float-left flex-center"
                       >
                         Back
                       </button>
                       <button
                         type="button"
                         id="votingSkip"
-                        class="btn btn-secondary btn float-right"
+                        class="btn btn-secondary btn float-right flex-center"
                       >
                         [&#x21B7;] Skip
                       </button>
@@ -344,6 +344,7 @@
         role="button"
         href="index.html"
         id="restart"
+        class="flex-center"
         >Button Neustart / Restart</a
       >
       <a
