Optimize sectionResults for desktop and tablet

--- a/index.html
+++ b/index.html
@@ -306,30 +306,24 @@
       <!-- 2. ERGEBNISSE / RESULTS -->
 
       <section id="sectionResults">
-        <div class="row d-none" id="finetuning">
-          <div class="col">
-            <div id="finetuningHeading" class="tabHeading"></div>
-            <div id="resultsByThesis">
-              Detaillierte Ergebnisse / Resultate mit eigener Meinung in
-              tabellarischer Form <br />
-              Table with results (long / detailed)
-            </div>
-            <!-- <div id="resultsAddonBottom">
-            </div> -->
+        <div class="col d-none" id="finetuning">
+          <div id="finetuningHeading" class="tabHeading"></div>
+          <div id="resultsByThesis">
+            Detaillierte Ergebnisse / Resultate mit eigener Meinung in
+            tabellarischer Form <br />
+            Table with results (long / detailed)
           </div>
         </div>
-        <div class="row activeTab" id="results">
-          <div class="col">
-            <div id="resultsHeading" class="tabHeading"></div>
-            <div id="resultsShort"></div>
-          </div>
+        <div class="col activeTab" id="results">
+          <div id="resultsHeading" class="tabHeading"></div>
+          <div id="resultsShort"></div>
         </div>
-        <div class="row d-none" id="shareAndSave">
+        <div class="col d-none" id="shareAndSave">
           <div id="shareAndSaveHeading" class="tabHeading"></div>
         </div>
-        <div class="row d-none" id="info">
+        <div class="col d-none" id="info">
           <div id="infoHeading" class="tabHeading"></div>
-          <div class="col"></div>
+          <div id="infoText"></div>
         </div>
       </section>
 
